2017.03.15 Kentaro Fukuchi <kentaro@fukuchi.org>
	* ChangeLog, NEWS, TODO:
	  - Typos fixed. (merged #95) (Thanks to @jwilk)
	* README, README.md:
	  - ACKNOWLEDGMENTS has been updated.

2017.02.05 Kentaro Fukuchi <kentaro@fukuchi.org>
	* README, README.md:
	  - Added some notes to compile test programs. (closes #93)
	* CMakeList.txt:
	  - Added BUILD_SHARED_LIBS option with MSVC export all. (merged #92)
	    (Thanks to @vilppuvuorinen)

2017.02.03 Kentaro Fukuchi <kentaro@fukuchi.org>
	* CMakeLists.txt, cmake/FIND*.cmake, tests/CMakeLists.txt:
	  - Merged #91. (Thanks to @aleksey-nikolaev)
	  - CMake support has been improved greatly.
	* README, README.md:
	  - ACKNOWLEDGMENTS has been updated.
	  - Some text cleanups.
	* tests/frame, .gitignore:
	  - Empty frame data "tests/frame" has been included in the source tree.
	* .travis.yml
	  - Stopped creating empty frame data.
	  - Bug fix.

2016.11.20 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/test_qrinput.c, tests/test_qrspec.c:
	  - Some warnings suppresed.

2016.11.17 Kentaro Fukuchi <kentaro@fukuchi.org>
	* CMakeLists.txt, tests/CMakeLists.txt, travis.yml, tests/common.h,
	  tests/decoder.c, .gitignore:
	  - Merged #85. (Thanks to @misery)
	* NEWS:
	  - Release note for version 4 has been updated.

2016.09.19 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c, qrencode.c, split.c:
	  - Merged #82. (Thanks to @UniQP)
	  - Various code cleanups.
	* *.h:
	  - Removed double underscores (__) from macro names in include guards.
	    (follows C99 standard)
	* configure.ac, *.c:
	  - Renamed __STATIC macro to STATIC_IN_RELEASE. (follows C99 standard)
	* qrencode.c:
	  - Removed unnecessary 'extern' from some functions.

2016.09.18 Kentaro Fukuchi <kentaro@fukuchi.org>
	* CMakeLists.txt:
	  - Merged #83. (Thanks to @misery)
	  - This allows CMake users building the library without configure script.
	    IF you are using incomplete UNIX-like environment and configure script
		does not work as expected, try CMake.