@@ -108,7 +108,7 @@ Written by Kentaro Fukuchi.
 
 .SH RESOURCES
 .TP
-Main Web Site: http://fukuchi.org/works/qrencode/
+Main Web Site: https://fukuchi.org/works/qrencode/
 .TP
 Source code repository: https://github.com/fukuchi/libqrencode/
 
